--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,4 +17,6 @@
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
 </ul>
+<app-edit></app-edit>
+<app-list></app-list>
 
