--- a/src/app/filmes/edit/edit.component.html
+++ b/src/app/filmes/edit/edit.component.html
@@ -1,1 +1,12 @@
-<p>edit works!!!!!!</p>
+<form (ngSubmit)="onSubmit()">
+    <div>
+        <label>Título</label>
+        <input type="text" [(ngModel)]="filme.titulo" name="titulo">
+    </div>
+    <div>
+        <label>Ano</label>
+        <input type="text" [(ngModel)]="filme.ano" name="ano">
+    </div>
+
+    <button type="submit">Salvar</button>
+</form>
