--- a/src/app/filmes/list/list.component.html
+++ b/src/app/filmes/list/list.component.html
@@ -1,10 +1,14 @@
-<div *ngFor="let filme of filmes | async">
-  <div>
-    <h5>{{ filme.titulo }}</h5>
-    <p>{{ filme.ano }}</p>
-  </div>
-  <div>
-    <button type="button" (click)="edit(filme, filme.key)">Editar</button>
-    <button type="button" (click)="delete(filme.key)">Excluir</button>
+<div class="container">
+  <div class="row">
+    <div *ngFor="let filme of filmes | async" class="card col-md-3">
+      <div class="card-body">
+        <h5 class="card-title">{{ filme.titulo }}</h5>
+        <p class="card-text">{{ filme.ano }}</p>
+      </div>
+      <div class="card-footer">
+        <button class="btn btn-primary" type="button" (click)="edit(filme, filme.key)">Editar</button>
+        <button class="btn btn-danger ml-2" type="button" (click)="delete(filme.key)">Excluir</button>
+      </div>
+    </div>
   </div>
 </div>
